--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
+plugins:
+  - jekyll-seo-tag
 locale                   : "en-US"
 title                    : "Computer Engineering Blog"
 title_separator          : "-"
